--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -142,12 +142,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AttySymbols.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Project1.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AttySymbols.cpp" />
     <ClCompile Include="D:\Downloads\jsoncpp-master\jsoncpp-master\dist\jsoncpp.cpp" />
     <ClCompile Include="Project1.cpp" />
   </ItemGroup>
